--- a/public/index.html
+++ b/public/index.html
@@ -271,6 +271,7 @@
         });
 
         window.mapData.forEach((coordObj) => {
+          // [TODO] Ensure this color contrasts well with the map background color
           var randomColor = Math.floor(Math.random() * 16777215).toString(16);
 
           console.log('randomColor', randomColor);
